static/css/agency.css
body{
	overflow-x:hidden;
	font-family:"Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
	}
	.text-muted{
		color:#777;
		
	}
	.text-primary{
		color:#5fa822;
		/*custom green*/
	}
	p{
		font-size:14px;
		line-height:1.75;
	}
	p.large{
		font-size:16px;
	}
	a,a:hover,a:focus,a:active,a.active{
		outline:0;
	}
	a{
		color:#5fa822;
	}
	a:hover,a:focus,a:active,a.active{
		color:#488d0f;
		/*dark green for highlight*/
	}
	h1,h2,h3,h4,h5,h6{
		font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
		text-transform:uppercase;
		font-weight:700;
	}
	.img-centered{
		margin:0 auto;
	}
	.bg-light-gray{
		background-color: #cccccc;
		background-image: linear-gradient(
		180deg,
    	#cccccc,
    	white);
	}
	#hobbies p{
		text-align: justify;
	}
	.bg-darkest-gray{
		background-color:#151214;
	}
	.btn-primary{
		color:#fff;
		/*white*/
		background-color:#5fa822;
		border-color:#5fa822;
		font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
		text-transform:uppercase;
		font-weight:700;
	}
	.btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.open .dropdown-toggle.btn-primary{
		color:#fff;
		background-color:#488d0f;
		border-color:#42810e;
	}
	.btn-primary:active,.btn-primary.active,.open .dropdown-toggle.btn-primary{
		background-image:none;
	}
	.btn-primary.disabled,.btn-primary[disabled],fieldset[disabled] .btn-primary,.btn-primary.disabled:hover,.btn-primary[disabled]:hover,fieldset[disabled] .btn-primary:hover,.btn-primary.disabled:focus,.btn-primary[disabled]:focus,fieldset[disabled] .btn-primary:focus,.btn-primary.disabled:active,.btn-primary[disabled]:active,fieldset[disabled] .btn-primary:active,.btn-primary.disabled.active,.btn-primary[disabled].active,fieldset[disabled] .btn-primary.active{
		background-color:#5fa822;
		border-color:#5fa822;
	}
	.btn-primary .badge{
		color:#5fa822;
		background-color:#fff;
	}
	.btn-xl{
		color:#fff;
		background-color:#5fa822;
		border-color:#5fa822;
		font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
		text-transform:uppercase;
		font-weight:700;
		border-radius:3px;
		font-size:18px;
		padding:20px 40px;
	}
	.btn-xl:hover,.btn-xl:focus,.btn-xl:active,.btn-xl.active,.open .dropdown-toggle.btn-xl{
		color:#fff;
		background-color:#488d0f;
		border-color:#42810e;
		}
	.btn-xl:active,.btn-xl.active,.open .dropdown-toggle.btn-xl{
		background-image:none;
	}
	.btn-xl.disabled,.btn-xl[disabled],fieldset[disabled] .btn-xl,.btn-xl.disabled:hover,.btn-xl[disabled]:hover,fieldset[disabled] .btn-xl:hover,.btn-xl.disabled:focus,.btn-xl[disabled]:focus,fieldset[disabled] .btn-xl:focus,.btn-xl.disabled:active,.btn-xl[disabled]:active,fieldset[disabled] .btn-xl:active,.btn-xl.disabled.active,.btn-xl[disabled].active,fieldset[disabled] .btn-xl.active{
		background-color:#5fa822;
		border-color:#5fa822;
	}
	.btn-xl .badge{
		color:#5fa822;
		background-color:#fff;
	}
	.navbar-default{
		background-color:#151214;
		border-color:transparent;
	}
	.navbar-default .navbar-brand{
		color:#5fa822;
		font-family:"Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
	}
	.navbar-default .navbar-brand:hover,.navbar-default .navbar-brand:focus,.navbar-default .navbar-brand:active,.navbar-default .navbar-brand.active{
		color:#488d0f;
	}
	.navbar-default .navbar-collapse{
		border-color:rgba(255,255,255,.02);
	}
	.navbar-default .navbar-toggle{
		background-color:#5fa822;
		border-color:#5fa822;
	}
	.navbar-default .navbar-toggle .icon-bar{
		background-color:#fff;
	}
	.navbar-default .navbar-toggle:hover,.navbar-default .navbar-toggle:focus{
		background-color:#5fa822;
	}
	.navbar-default .nav li a{
		font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
		text-transform:uppercase;
		font-weight:400;
		letter-spacing:1px;
		color:#fff;
	}
	.navbar-default .nav li a:hover,.navbar-default .nav li a:focus{
		color:#5fa822;
		outline:0;
	}
	.navbar-default .navbar-nav>.active>a{
		border-radius:0;
		color:#fff;
		background-color:#5fa822;
	}
	.navbar-default .navbar-nav>.active>a:hover,.navbar-default .navbar-nav>.active>a:focus{
		color:#fff;
		background-color:#488d0f;
	}

@media (min-width:768px){
	.navbar-default{
		background-color:transparent;
		padding:25px 0;
		-webkit-transition:padding .3s;
		-moz-transition:padding .3s;
		transition:padding .3s;
		border:0;
	}
	.navbar-default .navbar-brand{
		font-size:2em;
		-webkit-transition:all .3s;
		-moz-transition:all .3s;
		transition:all .3s;
	}
	.navbar-default .navbar-nav>.active>a{
		border-radius:3px;
	}
	.navbar-default.navbar-shrink{
		background-color:#151214;
		padding:10px 0;
	}
	.navbar-default.navbar-shrink .navbar-brand{
		font-size:1.5em;
	}
}

header{
	background-image:url(../img/green13.jpg);
	background-repeat:none;
	background-attachment: fixed;
	/*background-attachment:scroll;*/
	background-position:center center;
	-webkit-background-size:cover;
	-moz-background-size:cover;
	background-size:cover;
	-o-background-size:cover;
	text-align:center;
	color:#fff;
}

	header .intro-text{
		padding-top:50px;
		padding-bottom:50px;
	}

	header .intro-text .intro-lead-in{
		font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
		text-transform:uppercase;
		font-weight:700;
		font-size:50px;
		line-height:50px;
		/*font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
		font-style:italic;
		font-size:22px;
		line-height:22px;*/
		margin-bottom:25px;
	}

	header .intro-text .intro-heading{
		font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
		font-style:italic;
		font-size:22px;
		line-height:22px;
		/*font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
		text-transform:uppercase;
		font-weight:700;
		font-size:50px;
		line-height:50px;*/
		margin-bottom:25px;
	}
/* ... */

